@@ -1,3 +1,6 @@
+* Mon Dec 05 2016 Nick Markowski <nmarkowski@keywcorp.com> - 5.0.1-0
+- Replaced xwindows with gdm.
+
 * Tue Nov 22 2016 Jeanne Greulich <jgreulich@onyxpoint.com> - 5.0.0-0
 - Bump major version
 
